admin: Fix modal z-index to be above toaster.

--- a/admin/src/css/components/modal.sass
+++ b/admin/src/css/components/modal.sass
@@ -11,8 +11,8 @@ $modalPadding: 15px
   flex-direction: column
   align-items: center
   animation: fadeIn 0.2s;
-  z-index: 90
-  padding-top: 40px
+  z-index: 110
+  padding-top: 60px
 
   .modal-pad
     height: 20%
